adjust text size

--- a/HTML5/src/style.css
+++ b/HTML5/src/style.css
@@ -40,7 +40,7 @@ body {
 
 .book-title {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 100px;
+	font-size: 6em;
 	font-weight: normal;
 	line-height: 0.85em;
 	text-transform: uppercase;
