--- a/yc/assets/style.css
+++ b/yc/assets/style.css
@@ -221,3 +221,10 @@ footer small {
 	margin-right: 1em;
 	line-height: 1.4em;
 }
+#particles-js {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+}
