--- a/yc/assets/style.css
+++ b/yc/assets/style.css
@@ -234,8 +234,13 @@ footer small {
 	width: 100%;
 	height: 100%;
 }
-@media (max-width: 575.99px) {
+@media (max-width: 767.99px) {
 	#particles-js {
 		display: none;
+	}
+	#top-search .form-group {
+		display: flex;
+		align-items: center;
+		justify-content: center !important;
 	}
 }
