--- a/yc/assets/style.css
+++ b/yc/assets/style.css
@@ -189,7 +189,7 @@ footer {
 	border-top: 1px solid #E8EAEC;
 	color: #BBBBBB;
 	font-size: 0.9rem;
-	font-family: "OpenSans Condensed", "Roboto Condensed";
+	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 	font-weight: 200;
 }
 footer .row {
