fix responsive display

--- a/cc/assets/style.css
+++ b/cc/assets/style.css
@@ -43,7 +43,7 @@ body {
 	color: #fff;
 }
 header {
-	background-color: #222;
+	background-color: #fff;
 	width: 100%;
 	position: fixed;
 	left: 0;
@@ -220,6 +220,7 @@ header {
 
 .cc-info {
 	background-color: #fff;
+	padding-top: 1.5rem;
 }
 .cc-info h4 {
 	font-size: 1.25rem;
@@ -284,14 +285,13 @@ footer small {
 	font-weight: lighter;
 }
 .side-box {
-	width: 320px;
 }
 .float-ad {
 	position: fixed;
-	width: 339px;
 	top: 6rem;
 	z-index: 1;
 	text-align: center;
+	padding: 0 15px;
 }
 
 .link-exchange {
@@ -316,7 +316,11 @@ footer small {
 	width: 100%;
 	height: 100%;
 }
-@media (max-width: 767.99px) {
+@media (max-width: 575.98px) {
+
+}
+@media (max-width: 767.98px) {
+	
 	#particles-js {
 		display: none;
 	}
@@ -324,5 +328,13 @@ footer small {
 		display: flex;
 		align-items: center;
 		justify-content: center !important;
+	}
+}
+@media (max-width: 991.98px) {
+	#content {
+		padding-top: 6rem;
+	}
+	.side-box {
+		display: none;
 	}
 }
