--- a/cc/assets/style.css
+++ b/cc/assets/style.css
@@ -284,12 +284,8 @@ header {
 	padding: 1rem 0;
 }
 .cc-intro p {
-	max-width: 100%;
 	overflow-wrap: break-word;
-	line-break: normal;
-	white-space: pre-line;
-	word-wrap: break-word;
-	word-break: break-all;
+	line-break: break-all;
 }
 
 footer {
