short link no break line

--- a/cc/assets/style.css
+++ b/cc/assets/style.css
@@ -179,6 +179,7 @@ header {
 	vertical-align: top;
 	color: #999;
 	margin-left: 0.5rem;
+	display: inline-block;
 }
 .box-header .post-time {
 	/*font-family: 'Open Sans', Roboto, sans-serif;*/
