--- a/cc/assets/style.css
+++ b/cc/assets/style.css
@@ -55,13 +55,22 @@ header {
 	color: rgba(255,255,255,0.5);
 }
 #site-search input[type="search"]:focus {
-	outline-color: rgba(255,255,255,0.5);
+	background-color: rgba(255,255,255,0.8);
+	border-color: rgba(255,255,255,0.8);
+	color: rgba(0,0,0,1.0);
+}
+#site-search input[type="search"]:focus::placeholder {
+	color: rgba(0,0,0,1.0);
 }
 #site-search button[type="submit"] {
 	border: 1px solid rgba(255,255,255,0.3);
 	color: rgba(255,255,255,0.5);
 }
-
+#site-search button[type="submit"]:hover {
+	background-color: rgba(255,255,255,0.8);
+	border: 1px solid rgba(255,255,255,0.8);
+	color: rgba(0,0,0,0.5);
+}
 #cc-header .row {
 	padding-bottom: 1rem;
 	margin: 0 1rem;
