--- a/css/resume.css
+++ b/css/resume.css
@@ -101,10 +101,10 @@ body {
 	background-color: #32322E;
 }
 .slide .avatar {
-	background: url(../images/github.png) center center no-repeat;
+	background: url(../images/photo2.jpg) center center no-repeat;
 	background-size: contain;
-	background-image: url(../images/github.svg), none;
-	filter: invert(1);
+	/*background-image: url(../images/github.svg), none;*/
+	/*filter: invert(1);*/
 }
 #info p.name {
 	font-size: 2em;
@@ -752,9 +752,9 @@ p.name .fi {
 	}
 	.slide .avatar {
 		transform: translate(0, -256px);
-		background: url(../images/github.png) center center no-repeat;
+		background: url(../images/photo2.jpg) center center no-repeat;
 		background-size: contain;
-		background-image: url(../images/github.svg), none;
+		/*background-image: url(../images/github.svg), none;*/
 		animation: showup 0.6s linear 30.8s;
 		animation-fill-mode: forwards;
 	}
