--- a/css/resume.css
+++ b/css/resume.css
@@ -48,7 +48,7 @@ body {
 	padding: 0.6em 0;
 	border-bottom: 1px solid #E1E1C6;
 }
-.section p, #objectives li {
+.section p, #objective li {
 	font-family: "Open Sans", "PingFang TC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
 .section p {
