--- a/css/resume.css
+++ b/css/resume.css
@@ -263,7 +263,7 @@ p.name .fi {
 
 .social_links li span.social_9gag {
   background: url(../images/icon_9gag.png) center center no-repeat;
-  background-image: url(../images/9gag.svg), none;
+  background-image: url(../images/9gag.svg);
   background-size: 1em;
   filter: invert(100%);
 }
