--- a/css/resume.css
+++ b/css/resume.css
@@ -262,8 +262,7 @@ p.name .fi {
 }
 
 .social_links li span.social_9gag {
-  background: url(../images/icon_9gag.png) center center no-repeat;
-  background-image: url(../images/9gag.svg);
+  background: url(../images/icon_9gag.svg) center center no-repeat;
   background-size: 1em;
   filter: invert(100%);
 }
